tests/snapshots/snapshots__view-sessions-compact.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
  sessions ────────────────────────────────
  scope and sort · recent
  1. 4a80c752 | Review authentication ...
  2. b419de17 | Plan the release | 12 ...
  3. 936efb90 | Review the alternate a...
  4. ff82d346 | Add keyboard navigatio...
  5. 3f473bc6 | 3f473bc6 | 1 msg | arc...



   Enter resume  / search  Esc close
 ──────────────────────────────────────────
---
r0 c0..1 bg=Background
r0 c1..11 fg=Primary bg=Background bold
r0 c11..43 fg=Border bg=Background
r0 c43..44 bg=Background
r1 c0..2 bg=Background
r1 c2..25 fg=Muted bg=Background
r1 c25..44 bg=Background
r2 c0..2 bg=Background
r2 c2..41 fg=Foreground bg=Selected bold
r2 c41..44 bg=Background
r3 c0..2 bg=Background
r3 c2..41 fg=Foreground bg=Background
r3 c41..44 bg=Background
r4 c0..2 bg=Background
r4 c2..41 fg=Foreground bg=Background
r4 c41..44 bg=Background
r5 c0..2 bg=Background
r5 c2..41 fg=Foreground bg=Background
r5 c41..44 bg=Background
r6 c0..2 bg=Background
r6 c2..41 fg=Foreground bg=Background
r6 c41..44 bg=Background
r7 c0..44 bg=Background
r8 c0..44 bg=Background
r9 c0..44 bg=Background
r10 c0..2 bg=Background
r10 c2..9 fg=Primary bg=Background bold
r10 c9..15 fg=Muted bg=Background
r10 c15..16 bg=Background
r10 c16..19 fg=Primary bg=Background bold
r10 c19..25 fg=Muted bg=Background
r10 c25..26 bg=Background
r10 c26..31 fg=Primary bg=Background bold
r10 c31..36 fg=Muted bg=Background
r10 c36..44 bg=Background
r11 c0..1 bg=Background
r11 c1..43 fg=Border bg=Background
r11 c43..44 bg=Background

== dark-graphite
  sessions ────────────────────────────────
  scope and sort · recent
  1. 4a80c752 | Review authentication ...
  2. b419de17 | Plan the release | 12 ...
  3. 936efb90 | Review the alternate a...
  4. ff82d346 | Add keyboard navigatio...
  5. 3f473bc6 | 3f473bc6 | 1 msg | arc...



   Enter resume  / search  Esc close
 ──────────────────────────────────────────
---
r0 c0..1 bg=Background
r0 c1..11 fg=Primary bg=Background bold
r0 c11..43 fg=Border bg=Background
r0 c43..44 bg=Background
r1 c0..2 bg=Background
r1 c2..25 fg=Muted bg=Background
r1 c25..44 bg=Background
r2 c0..2 bg=Background
r2 c2..41 fg=Foreground bg=Selected bold
r2 c41..44 bg=Background
r3 c0..2 bg=Background
r3 c2..41 fg=Foreground bg=Background
r3 c41..44 bg=Background
r4 c0..2 bg=Background
r4 c2..41 fg=Foreground bg=Background
r4 c41..44 bg=Background
r5 c0..2 bg=Background
r5 c2..41 fg=Foreground bg=Background
r5 c41..44 bg=Background
r6 c0..2 bg=Background
r6 c2..41 fg=Foreground bg=Background
r6 c41..44 bg=Background
r7 c0..44 bg=Background
r8 c0..44 bg=Background
r9 c0..44 bg=Background
r10 c0..2 bg=Background
r10 c2..9 fg=Primary bg=Background bold
r10 c9..15 fg=Muted bg=Background
r10 c15..16 bg=Background
r10 c16..19 fg=Primary bg=Background bold
r10 c19..25 fg=Muted bg=Background
r10 c25..26 bg=Background
r10 c26..31 fg=Primary bg=Background bold
r10 c31..36 fg=Muted bg=Background
r10 c36..44 bg=Background
r11 c0..1 bg=Background
r11 c1..43 fg=Border bg=Background
r11 c43..44 bg=Background

== light-truecolor
  sessions ────────────────────────────────
  scope and sort · recent
  1. 4a80c752 | Review authentication ...
  2. b419de17 | Plan the release | 12 ...
  3. 936efb90 | Review the alternate a...
  4. ff82d346 | Add keyboard navigatio...
  5. 3f473bc6 | 3f473bc6 | 1 msg | arc...



   Enter resume  / search  Esc close
 ──────────────────────────────────────────
---
r0 c1..11 fg=Primary bold
r0 c11..43 fg=Border
r1 c2..25 fg=Muted
r2 c2..41 fg=Foreground bg=Selected bold
r3 c2..41 fg=Foreground
r4 c2..41 fg=Foreground
r5 c2..41 fg=Foreground
r6 c2..41 fg=Foreground
r10 c2..9 fg=Primary bold
r10 c9..15 fg=Muted
r10 c16..19 fg=Primary bold
r10 c19..25 fg=Muted
r10 c26..31 fg=Primary bold
r10 c31..36 fg=Muted
r11 c1..43 fg=Border

== dark-256
  sessions ────────────────────────────────
  scope and sort · recent
  1. 4a80c752 | Review authentication ...
  2. b419de17 | Plan the release | 12 ...
  3. 936efb90 | Review the alternate a...
  4. ff82d346 | Add keyboard navigatio...
  5. 3f473bc6 | 3f473bc6 | 1 msg | arc...



   Enter resume  / search  Esc close
 ──────────────────────────────────────────
---
r0 c0..1 bg=Background|DiffAddedTint
r0 c1..11 fg=Primary bg=Background|DiffAddedTint bold
r0 c11..43 fg=Border bg=Background|DiffAddedTint
r0 c43..44 bg=Background|DiffAddedTint
r1 c0..2 bg=Background|DiffAddedTint
r1 c2..25 fg=Muted bg=Background|DiffAddedTint
r1 c25..44 bg=Background|DiffAddedTint
r2 c0..2 bg=Background|DiffAddedTint
r2 c2..41 fg=Foreground bg=Selected bold
r2 c41..44 bg=Background|DiffAddedTint
r3 c0..2 bg=Background|DiffAddedTint
r3 c2..41 fg=Foreground bg=Background|DiffAddedTint
r3 c41..44 bg=Background|DiffAddedTint
r4 c0..2 bg=Background|DiffAddedTint
r4 c2..41 fg=Foreground bg=Background|DiffAddedTint
r4 c41..44 bg=Background|DiffAddedTint
r5 c0..2 bg=Background|DiffAddedTint
r5 c2..41 fg=Foreground bg=Background|DiffAddedTint
r5 c41..44 bg=Background|DiffAddedTint
r6 c0..2 bg=Background|DiffAddedTint
r6 c2..41 fg=Foreground bg=Background|DiffAddedTint
r6 c41..44 bg=Background|DiffAddedTint
r7 c0..44 bg=Background|DiffAddedTint
r8 c0..44 bg=Background|DiffAddedTint
r9 c0..44 bg=Background|DiffAddedTint
r10 c0..2 bg=Background|DiffAddedTint
r10 c2..9 fg=Primary bg=Background|DiffAddedTint bold
r10 c9..15 fg=Muted bg=Background|DiffAddedTint
r10 c15..16 bg=Background|DiffAddedTint
r10 c16..19 fg=Primary bg=Background|DiffAddedTint bold
r10 c19..25 fg=Muted bg=Background|DiffAddedTint
r10 c25..26 bg=Background|DiffAddedTint
r10 c26..31 fg=Primary bg=Background|DiffAddedTint bold
r10 c31..36 fg=Muted bg=Background|DiffAddedTint
r10 c36..44 bg=Background|DiffAddedTint
r11 c0..1 bg=Background|DiffAddedTint
r11 c1..43 fg=Border bg=Background|DiffAddedTint
r11 c43..44 bg=Background|DiffAddedTint

== light-256
  sessions ────────────────────────────────
  scope and sort · recent
  1. 4a80c752 | Review authentication ...
  2. b419de17 | Plan the release | 12 ...
  3. 936efb90 | Review the alternate a...
  4. ff82d346 | Add keyboard navigatio...
  5. 3f473bc6 | 3f473bc6 | 1 msg | arc...



   Enter resume  / search  Esc close
 ──────────────────────────────────────────
---
r0 c1..11 fg=Primary bold
r0 c11..43 fg=Border
r1 c2..25 fg=Muted|Hint|Dim
r2 c2..41 fg=Foreground bg=Hover|Selected|DiffAddedTint|DiffRemovedTint bold
r3 c2..41 fg=Foreground
r4 c2..41 fg=Foreground
r5 c2..41 fg=Foreground
r6 c2..41 fg=Foreground
r10 c2..9 fg=Primary bold
r10 c9..15 fg=Muted|Hint|Dim
r10 c16..19 fg=Primary bold
r10 c19..25 fg=Muted|Hint|Dim
r10 c26..31 fg=Primary bold
r10 c31..36 fg=Muted|Hint|Dim
r11 c1..43 fg=Border

== ansi-16
  sessions ────────────────────────────────
  scope and sort · recent
  1. 4a80c752 | Review authentication ...
  2. b419de17 | Plan the release | 12 ...
  3. 936efb90 | Review the alternate a...
  4. ff82d346 | Add keyboard navigatio...
  5. 3f473bc6 | 3f473bc6 | 1 msg | arc...



   Enter resume  / search  Esc close
 ──────────────────────────────────────────
---
r0 c1..11 fg=Primary bold dim
r0 c11..43 dim
r1 c2..25 dim
r2 c2..41 bold
r10 c2..9 fg=Primary bold
r10 c9..15 dim
r10 c16..19 fg=Primary bold
r10 c19..25 dim
r10 c26..31 fg=Primary bold
r10 c31..36 dim
r11 c1..43 dim

== unknown-ground
  sessions ────────────────────────────────
  scope and sort · recent
  1. 4a80c752 | Review authentication ...
  2. b419de17 | Plan the release | 12 ...
  3. 936efb90 | Review the alternate a...
  4. ff82d346 | Add keyboard navigatio...
  5. 3f473bc6 | 3f473bc6 | 1 msg | arc...



   Enter resume  / search  Esc close
 ──────────────────────────────────────────
---
r0 c1..11 fg=Primary bold dim
r0 c11..43 dim
r1 c2..25 dim
r2 c2..41 bold
r10 c2..9 fg=Primary bold
r10 c9..15 dim
r10 c16..19 fg=Primary bold
r10 c19..25 dim
r10 c26..31 fg=Primary bold
r10 c31..36 dim
r11 c1..43 dim

== no-color
  sessions ────────────────────────────────
  scope and sort · recent
  1. 4a80c752 | Review authentication ...
  2. b419de17 | Plan the release | 12 ...
  3. 936efb90 | Review the alternate a...
  4. ff82d346 | Add keyboard navigatio...
  5. 3f473bc6 | 3f473bc6 | 1 msg | arc...



   Enter resume  / search  Esc close
 ──────────────────────────────────────────
---
r0 c1..11 bold dim
r0 c11..43 dim
r1 c2..25 dim
r2 c2..41 bold
r10 c2..9 bold
r10 c9..15 dim
r10 c16..19 bold
r10 c19..25 dim
r10 c26..31 bold
r10 c31..36 dim
r11 c1..43 dim

== ascii
  sessions --------------------------------
  scope and sort . recent
  1. 4a80c752 | Review authentication ...
  2. b419de17 | Plan the release | 12 ...
  3. 936efb90 | Review the alternate a...
  4. ff82d346 | Add keyboard navigatio...
  5. 3f473bc6 | 3f473bc6 | 1 msg | arc...



   Enter resume  / search  Esc close
 ------------------------------------------
---
r0 c1..11 bold dim
r0 c11..43 dim
r1 c2..25 dim
r2 c2..41 bold
r10 c2..9 bold
r10 c9..15 dim
r10 c16..19 bold
r10 c19..25 dim
r10 c26..31 bold
r10 c31..36 dim
r11 c1..43 dim
